# beast

./: CHANGELOG.md
doc/qbk/04_http/: 03_streams.qbk
include/boost/beast/: uri.hpp
include/boost/beast/http/: serializer.hpp
include/boost/beast/http/impl/: file_body_win32.ipp  serializer.ipp
include/boost/beast/uri/: error.hpp  parse.hpp  scheme.hpp  uri.hpp  uri_view.hpp
include/boost/beast/uri/detail/: parse.hpp  parts.hpp  rfc3986.hpp  types.hpp
include/boost/beast/uri/impl/: scheme.ipp
test/beast/http/: CMakeLists.txt  Jamfile  uri.cpp
test/beast/uri/: CMakeLists.txt  Jamfile  parse.cpp  scheme.cpp  uri.cpp
test/doc/: http_snippets.cpp
